update README file
